sumo/tests/sumo/errors/wauts/cross3ltl_error_missing_to_prog/tls_state_switch.sumo
<?xml version="1.0"?>

<!-- generated on Sat Sep  8 15:14:15 2007 by SUMO sumo Version dev-SVN-r4432
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>input_routes.rou.xml</route-files>
      <additional-files>input_additional.add.xml</additional-files>
   </input>

   <time>
      <begin>0</begin>
      <end>400</end>
   </time>

   <processing>
      <no-duration-log>true</no-duration-log>
   </processing>

</configuration>
-->

<tls-switch-states>
</tls-switch-states>
